Made adjustments to how visitors are created to aid with unit testing.